# mcp-xray

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  mcp_names_mapping.json  pyproject.toml  xray_v2.0.json
.github/workflows/: lint.yaml  publish.yaml  test.yaml
src/mcp_xray/: __init__.py  __main__.py  config.py  server.py
src/mcp_xray/core/: __init__.py
src/mcp_xray/io/: __init__.py  fetchers.py  readers.py  validators.py
src/mcp_xray/utils/: __init__.py  loaders.py  logging.py  readers.py  spec.py
src/mcp_xray/xray/: __init__.py  client.py  config.py
tests/: conftest.py
tests/fixtures/: config_sample.yaml  openapi_sample.json
tests/integration/: test_cli.py  test_server.py
tests/unit/core/: test_config.py
tests/unit/io/: test_fetchers.py  test_readers.py  test_validators.py
tests/unit/xray/: test_client.py
